methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:54: error: expected class or object definition
def faitDemiVBG(c :Color) {
^PatternPicture:69: error: expected class or object definition
def faitCarre() {
^PatternPicture:81: error: Unmatched closing brace '}' ignored here
}
^